# seiro-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.example.toml
.github/: PULL_REQUEST_TEMPLATE.md  mlc.internal.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: Gemfile  _config.yml  compatibility.md  config.md  glossary.md  index.md  manual-test-cargo-install-workflow.md  quickstart.md  readme_review_checklist.md  release.md  runbook.md  telemetry.md
docs/_layouts/: default.html
docs/refactor/: module-map.md  responsibility-guidelines.md
scripts/: check_docs_language.sh  check_docs_links.sh  langscan.sh
scripts/refactor/: api_baseline.sh  check_docs.sh  loc_baseline.sh  loc_guard.sh
skills/seiro-mcp-visionos-build-operator/: SKILL.md
skills/visionos-build-operator/: SKILL.md
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs  profile.rs
src/lib/: errors.rs  fs.rs  mod.rs  paths.rs  telemetry.rs  visionos.rs  xcodebuild.rs
src/server/: auth.rs  mod.rs
src/tools/: mod.rs
tests/: integration.rs
tests/fixtures/: config_empty_allowed_paths.toml  config_empty_allowed_schemes.toml  config_invalid_default_project_path.toml  config_invalid_port.toml  config_missing_allowed_paths.toml  config_missing_allowed_schemes.toml  config_missing_token.toml  config_missing_visionos.toml  config_relative_allowed_path.toml  config_token_mismatch.toml  config_valid.toml  contracts_sha256.txt  seiro_mcp_minimal.toml
xtask/: Cargo.toml  README.md
(+57 files in other folders)
